HelloUltraviolet/Fixtures/RejectedSource/Expressions/LoopAsyncEnclosingReturn/Expected.uv
//! Expected diagnostic metadata for the LoopAsyncEnclosingReturn rejected-source specimen.

expectedDiagnostic("E-CON-0240", "rule.21.Loop-Async-Err")
